// src/proto/wallet_coordinator/wallet_common.proto
syntax = "proto3";
package mpc_engine.proto.wallet_coordinator;

// 공통 요청 헤더
message WalletRequestHeader {
    uint32 message_type = 1;           // WalletMessageType enum 값
    string request_id = 2;
    string timestamp = 3;
    string coordinator_id = 4;
}

// 공통 응답 헤더
message WalletResponseHeader {
    uint32 message_type = 1;           // WalletMessageType enum 값
    bool success = 2;
    string error_message = 3;
    string request_id = 4;
    string timestamp = 5;
}